tests/compile-fail/Rule_9_1.rs
#[allow(unused_variables)]

fn main() {
    let x: u16;
    let y = x + 1;
    //~^ ERROR use of possibly uninitialized variable: `x`
}
